--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
+/* global css start-------- */
+:root{
+  --primary-color:#04D2C8;
+  --white-color:#ffffff;
+  --text-gray:#42495b;
+  --gray-color:gray;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body{
+  font-family: 'Montserrat', sans-serif;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+img{
+  max-width: 100%;
 }
-
-.App-link {
-  color: #61dafb;
+a{
+  text-decoration: none !important;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+ul{
+  list-style: none;
 }
+.primary-btn{
+  padding: 6px 35px;
+  border-radius: 25px;
+  background-color: var(--primary-color);
+  color: var(--white-color);
+  display: inline-block;
+  border: none;
+}
+.secondary-btn{
+  padding: 6px 35px;
+  border-radius: 25px;
+  background-color: var(--white-color);
+  color: var(--primary-color);
+  display: inline-block;
+  border: none;
+}
+/* global css end-------- */
