--- a/src/pages/Home/PricingBox/PricingBox.css
+++ b/src/pages/Home/PricingBox/PricingBox.css
@@ -37,7 +37,7 @@
 }
 
 .pricing-boxes :hover{
-    transform: translateY(-20px);
+    /* transform: translateY(-20px); */
     box-shadow: 2px 4px 3px 2px rgba(255, 255, 255, 0.911);
 }
 .pricing-box .pricingBox-partOne p{
