modify blog section

--- a/src/pages/Blogs/Blogs.css
+++ b/src/pages/Blogs/Blogs.css
@@ -1,3 +1,6 @@
+.blogContainer{
+    background-color: rgba(245, 245, 245, 0.795);
+}
 .bolgHeadLine{
     background-color: #4582FF;
     padding: 80px 0px;
