--- a/src/pages/Home/HeroSection/HeroSection.css
+++ b/src/pages/Home/HeroSection/HeroSection.css
@@ -1,5 +1,5 @@
 .hero_section{
-    background: url(../../../img/hero-bg.jpg);
+    background: url(../../../img/hero_bg.jpg);
     height: 82vh;
     width: 100%;
     background-position: center;
