--- a/src/pages/Home/HeroSection/HeroSection.css
+++ b/src/pages/Home/HeroSection/HeroSection.css
@@ -31,3 +31,12 @@
     font-weight: 500;
     color: var(--white-color);
 }
+/* media query */
+@media (max-width:768px){
+    .sec_title {
+        font-size: 38px;
+    }
+    .sec_sm_text {
+        font-size: 16px;
+    }
+}
