--- a/src/pages/Home/Services/Services.css
+++ b/src/pages/Home/Services/Services.css
@@ -32,3 +32,13 @@
     font-weight: 500;
     line-height: 28px;
 }
+
+
+/* media query */
+@media (max-width:768px){
+    .section_title h2 {
+        font-size: 38px;
+        font-weight: 600;
+    }
+    
+}
