--- a/src/components/shared/Navigation.css
+++ b/src/components/shared/Navigation.css
@@ -26,7 +26,9 @@
     color: var(--text-gray) !important;
     margin: 0 15px;
 }
-
+.activated{
+    color: var(--primary-color) !important;
+}
 .nav_link:last-child {
     margin-right: 0px;
 }
