--- a/src/pages/Home/Courses/Courses.css
+++ b/src/pages/Home/Courses/Courses.css
@@ -38,6 +38,10 @@
     font-size: 16px;
     padding: 2px 8px;
 }
+.animate_loader{
+    position: relative;
+    z-index: 99;
+}
 .course_bottom_item{
     position: relative;
 }
